<resources>
    <string name="app_name">DroidGolf</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
</resources>
