<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center" android:textSize="28sp" android:layout_marginTop="32dp"
            android:layout_marginRight="24dp" android:layout_marginLeft="24dp" android:id="@+id/app_name_text_view"
            android:contentDescription="@string/app_name"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_sign_up_button" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <Button
            android:text="@string/google_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/google_sign_in_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/user_sign_up_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.484"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edit_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password_edit_text" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/email" android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password_text_view" android:layout_marginBottom="8dp"
            android:hint="@string/password" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_text_view" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/forgot_password"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button" android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>