<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/email_sign_up_edit_text"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_sign_up_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:hint="@string/email" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/password_sign_up_edit_text"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_sign_up_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:hint="@string/password" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_edit_text"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/username"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/firstname_edit_text"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstname_edit_text"
            android:hint="@string/first_name" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/lastname_edit_text"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_sign_up_button" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastname_edit_text" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/last_name"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/user_sign_up_button" android:importantForAutofill="no" tools:targetApi="o"/>
</androidx.constraintlayout.widget.ConstraintLayout>